feat:add search and pagination for admin management (#42)